--- a/sass-css/_General-Style.scss
+++ b/sass-css/_General-Style.scss
@@ -1574,6 +1574,10 @@ body {
       }
     }
 
+    .Home{
+      height: 120rem;
+    }
+
     .About {
       padding-left: 4%;
       padding-right: 4%;
