--- a/sass-css/Styles.css
+++ b/sass-css/Styles.css
@@ -1060,30 +1060,81 @@ body .footer .footer-iconTop a i {
     font-size: 2rem;
   }
 }
-@media (max-width: 1440px) {
+@media (max-width: 1441px) {
   html {
     font-size: 65%;
   }
 }
-@media (max-width: 1400px) {
+@media (max-width: 1401px) {
   html {
     font-size: 61%;
   }
+  body .header #leng {
+    left: 58rem;
+  }
+  body .header #Btheme {
+    left: 52rem;
+  }
 }
-@media (max-width: 1200px) {
+@media (max-width: 1201px) {
   html {
     font-size: 46%;
+  }
+  body .header #leng {
+    left: 80rem;
+  }
+  body .header #Btheme {
+    left: 73rem;
+  }
+}
+@media (max-width: 1025px) {
+  body .header #leng {
+    left: 58rem;
+  }
+  body .header #Btheme {
+    left: 51rem;
   }
 }
 @media (max-width: 991px) {
   body .header {
     padding: 0 4%;
   }
+  body .header .navbar-toggler {
+    display: block;
+    position: relative;
+  }
+  body .header .navbar {
+    position: absolute;
+    top: 90%;
+    left: 0;
+  }
+  body .header .navbar #navbar {
+    width: 100vw;
+    height: 100%;
+    background-color: rgba(12, 22, 33, 0.4901960784);
+    -webkit-backdrop-filter: blur(5px);
+            backdrop-filter: blur(5px);
+  }
+  body .header .navbar #navbar .navbar-nav {
+    padding: 5rem 4%;
+  }
+  body .header .navbar #navbar .navbar-nav .nav-item .nav-link {
+    transition: 0.3s;
+    transition: text-shadow 0.3s ease;
+  }
+  body .header .navbar #navbar .navbar-nav .nav-item .nav-link:hover {
+    color: #00b7ff;
+    text-shadow: 0 0 1rem #00b7ff, 0 0 2rem #00b7ff, 0 0 3rem #00b7ff;
+  }
+  body .header .navbar #navbar .navbar-nav .nav-item .active {
+    color: #00b7ff;
+    text-shadow: 0 0 10px #00b7ff, 0 0 20px #00b7ff, 0 0 30px #00b7ff;
+  }
   body .header #leng {
-    left: 33rem;
+    left: 85rem;
   }
   body .header #Btheme {
-    left: 28rem;
+    left: 78rem;
   }
   body .Home {
     height: 110rem;
@@ -1151,41 +1202,10 @@ body .footer .footer-iconTop a i {
     font-size: 50%;
   }
   body .header #leng {
-    left: 77rem;
+    left: 78rem;
   }
   body .header #Btheme {
-    left: 70rem;
-  }
-  body .header .navbar-toggler {
-    display: block;
-    position: relative;
-  }
-  body .header .navbar {
-    position: absolute;
-    top: 90%;
-    left: 0;
-  }
-  body .header .navbar #navbar {
-    width: 100vw;
-    height: 100%;
-    background-color: rgba(12, 22, 33, 0.4901960784);
-    -webkit-backdrop-filter: blur(5px);
-            backdrop-filter: blur(5px);
-  }
-  body .header .navbar #navbar .navbar-nav {
-    padding: 5rem 4%;
-  }
-  body .header .navbar #navbar .navbar-nav .nav-item .nav-link {
-    transition: 0.3s;
-    transition: text-shadow 0.3s ease;
-  }
-  body .header .navbar #navbar .navbar-nav .nav-item .nav-link:hover {
-    color: #00b7ff;
-    text-shadow: 0 0 1rem #00b7ff, 0 0 2rem #00b7ff, 0 0 3rem #00b7ff;
-  }
-  body .header .navbar #navbar .navbar-nav .nav-item .active {
-    color: #00b7ff;
-    text-shadow: 0 0 10px #00b7ff, 0 0 20px #00b7ff, 0 0 30px #00b7ff;
+    left: 72rem;
   }
   body .About {
     padding-left: 2%;
@@ -1198,7 +1218,7 @@ body .footer .footer-iconTop a i {
     font-size: 2rem;
   }
 }
-@media (max-width: 576px) {
+@media (max-width: 577px) {
   html {
     font-size: 42%;
   }
@@ -1209,7 +1229,7 @@ body .footer .footer-iconTop a i {
     left: 44rem;
   }
 }
-@media (max-width: 425px) {
+@media (max-width: 426px) {
   html {
     font-size: 40%;
   }
@@ -1287,10 +1307,10 @@ body .footer .footer-iconTop a i {
     font-size: 25%;
   }
   body .header #leng {
-    left: 62rem;
+    left: 64rem;
   }
   body .header #Btheme {
-    left: 55rem;
+    left: 58rem;
   }
   body .Home .home-content .btn-box {
     width: 45rem;
