--- a/sass-css/_General-Style.scss
+++ b/sass-css/_General-Style.scss
@@ -897,6 +897,10 @@ body {
                   background-color: #4e4e4e;
                   border-radius: 0.5rem;
                 }
+                #SpjQuery {
+                  background-color: #0768AC;
+                  border-radius: 0.5rem;
+                }
               }
 
               #Enlaces {
