--- a/sass-css/_General-Style.scss
+++ b/sass-css/_General-Style.scss
@@ -4,15 +4,15 @@
 
 /*Variables*/
 $bg-navbar: #0c1621;
-$bg-primary: #0e2336;
-$bg-secundary: #295c88;
+$bg-primary: rgb(14, 35, 54);
+$bg-secundary: rgb(41, 92, 136);
 $text-color: #ffffff;
 $main-color: #00b7ff;
 $bg-degradado: linear-gradient(to top, $bg-primary, rgb(0, 0, 0));
 $Animation1: Dtop 1.5s ease-in-out;
 
 $bg-navbar-light: #248eff;
-$bg-primary-light: #69b9ff; 
+$bg-primary-light: rgb(105, 185, 255); 
 $bg-secundary-light: #51aeff;
 $before-background: rgb(0, 0, 0);
 
@@ -132,6 +132,7 @@ body {
                 color: $main-color;
                 text-shadow: 0 0 1rem $main-color, 0 0 2rem $main-color,
                   0 0 3rem $main-color;
+                  transition: all 0.5s ease-in-out;
               }
 
               .active {
@@ -152,12 +153,32 @@ body {
   .Home {
     color: $text-color;
     height: 80rem;
-    background: $bg-degradado;
     display: flex;
     align-items: center;
     padding: 0 10%;
     gap: 5rem;
-    z-index: 1;
+    position: relative;
+    transition: all 0.5s ease-in-out;
+
+    .FondoHome{
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      transition: opacity 0.5s ease-in-out;
+      z-index: -1;
+    }
+
+    #fondoH1 {
+      background: $bg-degradado; /* Degradado por defecto */
+      opacity: 1;
+  }
+    
+    #fondoH2 {
+      background: linear-gradient(to top, rgb(255, 255, 255), $bg-primary-light); /* Nuevo degradado */
+      opacity: 0;
+    }
 
     .ImgF {
       position: relative;
@@ -337,10 +358,29 @@ body {
   .About {
     --before-background: #{$before-background};
     position: relative;
-    background: linear-gradient(to top, $bg-secundary, rgb(12, 30, 46));
-    position: relative;
     padding: 0 10%;
     text-align: center;
+    transition: all 0.5s ease-in-out;
+
+    .FondoAbout{
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      transition: opacity 0.5s ease-in-out;
+      z-index: -1;
+    }
+
+    #fondoA1 {
+      background: linear-gradient(to top, $bg-secundary, rgb(12, 30, 46)); /* Degradado por defecto */
+      opacity: 1;
+  }
+    
+    #fondoA2 {
+      background: linear-gradient(to top, rgb(180, 180, 180), rgb(235, 246, 255)); /* Nuevo degradado */
+      opacity: 0;
+    }
 
     .heading {
       font-family: "Kenia", sans-serif;
@@ -465,6 +505,7 @@ body {
         border-left: 50vw solid var(--before-background); /* Ancho del triángulo (mitad del ancho de la pantalla) */
         border-right: 50vw solid var(--before-background); /* Ancho del triángulo (mitad del ancho de la pantalla) */
         border-top: 100px solid transparent;
+        transition: all 0.5s ease-in-out;
       }
     }
   }
@@ -474,7 +515,27 @@ body {
     position: relative;
     padding: 0 10%;
     padding-bottom: 1rem;
-    background: linear-gradient(to top, rgb(113, 113, 113), rgb(0, 0, 0));
+    transition: all 0.5s ease-in-out;
+
+    .FondoSkills{
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      transition: opacity 0.5s ease-in-out;
+      z-index: -1;
+    }
+
+    #fondoS1 {
+      background: linear-gradient(to top, rgb(113, 113, 113), rgb(0, 0, 0)); /* Degradado por defecto */
+      opacity: 1;
+  }
+    
+    #fondoS2 {
+      background: linear-gradient(to top, rgb(182, 251, 182), rgb(255, 255, 255), rgb(180, 180, 180)); /* Nuevo degradado */
+      opacity: 0;
+    }
 
     #MY {
       text-align: center;
@@ -754,13 +815,33 @@ body {
       border-left: 50vw solid var(--bg-before); /* Ancho del triángulo (mitad del ancho de la pantalla) */
       border-right: 50vw solid var(--bg-before); /* Ancho del triángulo (mitad del ancho de la pantalla) */
       border-top: 100px solid transparent;
+      transition: all 0.5s ease-in-out;
     }
   }
 
   .Projects {
     position: relative;
-    background: linear-gradient(to top, $bg-secundary, $bg-primary);
     padding: 0 10%;
+
+    .FondoProjects{
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      transition: opacity 0.5s ease-in-out;
+      z-index: -1;
+    }
+
+    #fondoP1 {
+      background: linear-gradient(to top, $bg-secundary, $bg-primary);/* Degradado por defecto */
+      opacity: 1;
+  }
+    
+    #fondoP2 {
+      background: linear-gradient(to top, rgb(240, 240, 240), $bg-primary-light); /* Nuevo degradado */
+      opacity: 0;
+    }
 
     #MY {
       text-align: center;
@@ -1016,10 +1097,29 @@ body {
   .Contact {
     min-height: auto;
     position: relative;
-    background: linear-gradient(to bottom, $bg-secundary, $bg-primary);
     padding: 0 10%;
     padding-top: 10rem;
     padding-bottom: 3rem;
+
+    .FondoContact{
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      transition: opacity 0.5s ease-in-out;
+      z-index: -1;
+    }
+
+    #fondoC1 {
+      background: linear-gradient(to bottom, $bg-secundary, $bg-primary);/* Degradado por defecto */
+      opacity: 1;
+  }
+    
+    #fondoC2 {
+      background: linear-gradient(to bottom, rgb(240, 240, 240), rgb(150, 150, 150)); /* Nuevo degradado */
+      opacity: 0;
+    }
 
     #contact {
       text-align: center;
