--- a/sass-css/Styles.css
+++ b/sass-css/Styles.css
@@ -725,7 +725,7 @@ body .Projects .projects-container .owl-carousel-1 .item {
 body .Projects .projects-container .owl-carousel-1 .card {
   margin: 2rem;
   color: #ffffff;
-  background-image: url("../img/ProjectPortfolio.png");
+  background-image: url("../img/ProjectPortfolio.webp");
   background-size: 31rem 43rem;
   background-repeat: no-repeat;
   background-position: center;
