--- a/sass-css/_General-Style.scss
+++ b/sass-css/_General-Style.scss
@@ -876,7 +876,7 @@ body {
         .card {
           margin: 2rem;
           color: $text-color;
-          background-image: url("../img/ProjectPortfolio.png");
+          background-image: url("../img/ProjectPortfolio.webp");
           background-size: 31rem 43rem;
           background-repeat: no-repeat;
           background-position: center;
